# QtnProperty-Python

./: .gitignore  CMakeLists.txt  README.md
Core/: CoreAPI.h
PropertyTest/: PropertyTest.cpp  PropertyTest.h  PropertyTest.qrc  PropertyTest.ui  main.cpp
PropertyWidget/: PropertyWidgetAPI.h
PropertyWidget/Delegates/: PropertyDelegateAux.h  PropertyDelegateFactory.cpp
cmake/: FindPYBIND11.cmake  FindPyQt5.cmake  FindSIP.cmake  SIPMacros.cmake
python/: CMakeLists.txt  configure.py  setup.py.in
python/pyqtn/: __init__.py
python/pyqtn/core/: __init__.py
python/pyqtn/widget/: __init__.py
python/sip/: QtnPropertymod.sip
python/sip/Core/: PropertyCoremod.sip  enum.sip  property.sip  propertyAux.sip  propertyBase.sip  propertyDelegateInfo.sip  propertySet.sip
python/sip/Core/Core/: propertyBool.sip  propertyDouble.sip  propertyEnum.sip  propertyEnumFlags.sip  propertyFloat.sip  propertyInt.sip  propertyQPoint.sip  propertyQPointF.sip  propertyQRect.sip  propertyQRectF.sip  propertyQSize.sip  propertyQSizeF.sip  propertyQString.sip  propertyUInt.sip
python/sip/Core/GUI/: propertyButton.sip  propertyQBrush.sip  propertyQColor.sip  propertyQFont.sip  propertyQPen.sip
python/sip/Widget/: PropertyWidgetmod.sip  accessibilityProxy.sip  propertyDelegate.sip  propertyDelegateAux.sip  propertyView.sip  propertyWidget.sip
python/test/: test.py
